--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,151 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta and Title -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PRTU Dashboard</title>
-  <script src="http://localhost:11100/mfs100.js"></script> <!-- MFS100/MFS110 SDK -->
 
-  <!-- Firebase SDK -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
-    import { getStorage, ref, uploadString, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-storage.js";
+  <!-- SDK for Fingerprint Scanner (MFS100/MFS110) running locally -->
+  <script src="http://localhost:11100/mfs100.js"></script>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyC4xomeSvvvmd0FYaTl1ieFI0Kw-xim9kI",
-      authDomain: "new-prototype-bo8vj.firebaseapp.com",
-      projectId: "new-prototype-bo8vj",
-      storageBucket: "new-prototype-bo8vj.appspot.com",
-      messagingSenderId: "299186708270",
-      appId: "1:299186708270:web:4be08ed24936ced407e4bf"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const storage = getStorage(app);
-
-    async function uploadToFirebase(base64Image, folder, filename) {
-      const storageRef = ref(storage, `${folder}/${filename}`);
-      await uploadString(storageRef, base64Image, 'data_url');
-      return await getDownloadURL(storageRef);
-    }
-
-    window.firebaseUploader = uploadToFirebase;
-  </script>
-
+  <!-- Dashboard Styles -->
   <style>
-    /* (CSS kept exactly same as yours) */
-    body {
-      font-family: Arial, sans-serif;
-      background: #f2f2f2;
-      margin: 0;
-      font-size: 14px;
-    }
-    header {
-      background: #003366;
-      color: white;
-      padding: 10px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 18px;
-    }
-    header button {
-      background-color: #ff4444;
-      color: white;
-      border: none;
-      padding: 5px 12px;
-      font-size: 13px;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    nav {
-      display: flex;
-      background: #ddd;
-    }
-    nav button {
-      flex: 1;
-      padding: 8px;
-      border: none;
-      cursor: pointer;
-      background: #bbb;
-      font-size: 13px;
-    }
-    nav button.active {
-      background: #003366;
-      color: white;
-    }
-    main {
-      padding: 10px;
-    }
+    body { font-family: Arial, sans-serif; background: #f2f2f2; margin: 0; font-size: 14px; }
+    header { background: #003366; color: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; }
+    header h1 { margin: 0; font-size: 18px; }
+    header button { background-color: #ff4444; color: white; border: none; padding: 5px 12px; font-size: 13px; border-radius: 4px; cursor: pointer; }
+    nav { display: flex; background: #ddd; }
+    nav button { flex: 1; padding: 8px; border: none; cursor: pointer; background: #bbb; font-size: 13px; }
+    nav button.active { background: #003366; color: white; }
+    main { padding: 10px; }
     .tab { display: none; }
     .tab.active { display: block; }
-    .form-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-    .form-left, .form-right {
-      flex: 1;
-      min-width: 280px;
-    }
-    .form-group {
-      margin-bottom: 8px;
-    }
-    input, button {
-      width: 100%;
-      padding: 7px;
-      font-size: 13px;
-    }
-    .tab-section {
-      background: white;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      padding: 10px;
-      margin-bottom: 10px;
-    }
-    .user-cards {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-    .user-card {
-      background: white;
-      padding: 10px;
-      border-radius: 6px;
-      box-shadow: 0 0 4px rgba(0,0,0,0.1);
-      width: 260px;
-      font-size: 13px;
-    }
-    video, canvas, img.fingerprint-preview {
-      width: 100%;
-      border-radius: 4px;
-      margin-top: 6px;
-    }
-    canvas, img.fingerprint-preview {
-      display: none;
-    }
+    .form-row { display: flex; flex-wrap: wrap; gap: 10px; }
+    .form-left, .form-right { flex: 1; min-width: 280px; }
+    .form-group { margin-bottom: 8px; }
+    input, button { width: 100%; padding: 7px; font-size: 13px; }
+    .tab-section { background: white; border: 1px solid #ccc; border-radius: 6px; padding: 10px; margin-bottom: 10px; }
+    .user-cards { display: flex; flex-wrap: wrap; gap: 10px; }
+    .user-card { background: white; padding: 10px; border-radius: 6px; box-shadow: 0 0 4px rgba(0,0,0,0.1); width: 260px; font-size: 13px; }
+    video, canvas, img.fingerprint-preview { width: 100%; border-radius: 4px; margin-top: 6px; }
+    canvas, img.fingerprint-preview { display: none; }
   </style>
 </head>
 <body>
+  <!-- Header section -->
   <header>
     <h1>PRTU Dashboard</h1>
     <button onclick="logout()">Logout</button>
   </header>
 
+  <!-- Navigation Tabs -->
   <nav>
     <button class="active" onclick="switchTab('addTab', this)">Add/Edit User</button>
     <button onclick="switchTab('logsTab', this)">View Logs</button>
   </nav>
 
+  <!-- Main Dashboard Display -->
   <main>
+    <!-- Add/Edit User tab -->
     <div id="addTab" class="tab active">
       <h2 id="form-title">Add New User</h2>
       <div class="form-row">
+        <!-- Left Section: Input fields for user details -->
         <div class="form-left">
-          <!-- Input fields -->
           <div class="form-group"><input type="text" id="name" placeholder="Full Name" /></div>
           <div class="form-group"><input type="number" id="age" placeholder="Age" /></div>
           <div class="form-group"><input type="text" id="occupation" placeholder="Occupation" /></div>
@@ -164,13 +71,15 @@
           </div>
         </div>
 
+        <!-- Right Section: Image & Fingerprint -->
         <div class="form-right">
+          <!-- Webcam capture section -->
           <div class="tab-section">
             <label><strong>Click on video to capture photo</strong></label>
             <video id="video" autoplay muted playsinline onclick="takePhoto()"></video>
             <canvas id="canvas"></canvas>
           </div>
-
+          <!-- Fingerprint capture section -->
           <div class="tab-section">
             <label><strong>Fingerprint Capture (via MFS110)</strong></label>
             <button onclick="captureFingerprint()">Capture Thumb</button>
@@ -180,15 +89,18 @@
       </div>
     </div>
 
+    <!-- Logs tab: Shows saved users -->
     <div id="logsTab" class="tab">
       <h2>Saved Users</h2>
       <div class="user-cards" id="userCards"></div>
     </div>
   </main>
 
+  <!-- All custom JS functions -->
   <script>
-    let editingUserId = null;
+    let editingUserId = null; // For tracking edit state
 
+    // Switch between Add/Edit and Logs tab
     function switchTab(tabId, btn) {
       document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
       document.querySelectorAll('nav button').forEach(b => b.classList.remove('active'));
@@ -197,10 +109,12 @@
       if (tabId === 'logsTab') loadUsers();
     }
 
+    // Redirect to Login
     function logout() {
       window.location.href = "index.html";
     }
 
+    // Reset form fields for new entry
     function clearForm() {
       editingUserId = null;
       document.getElementById("form-title").innerText = "Add New User";
@@ -209,14 +123,13 @@
       document.getElementById("fingerprintPreview").style.display = "none";
     }
 
+    // Save or Update user information
     async function saveUser() {
       const canvas = document.getElementById("canvas");
-      const photoBase64 = canvas.toDataURL("image/png");
+      const photoBase64 = canvas.toDataURL("image/png"); // includes data URI prefix
       const thumbBase64 = document.getElementById("fingerprintPreview").src || "";
 
-      const id = editingUserId || Date.now();
-      const photoURL = photoBase64 ? await firebaseUploader(photoBase64, "photos", id + ".png") : "";
-      const thumbURL = thumbBase64 ? await firebaseUploader(thumbBase64, "fingerprints", id + ".bmp") : "";
+      const id = editingUserId || Date.now(); // Generate or use existing ID
 
       const user = {
         id: id,
@@ -226,8 +139,9 @@
         address: document.getElementById("address").value,
         contact: document.getElementById("contact").value,
         idNumber: document.getElementById("idNumber").value,
-        photo: photoURL,
-        thumbImg: thumbURL,
+        // Directly send images as base64 data (with data URI) to server
+        photoData: photoBase64,           // <-- now contains the full base64 png
+        thumbData: thumbBase64,           // <-- now contains the full base64 bmp
         documentNumber: document.getElementById("documentNumber").value,
         notarySrNo: document.getElementById("notarySrNo").value,
         documentType: document.getElementById("documentType").value,
@@ -236,6 +150,7 @@
         propertyValue: document.getElementById("propertyValue").value
       };
 
+      // Send everything to your MongoDB-backed API (server must handle and store images/binary)
       fetch(editingUserId ? "/update-user" : "/add-user", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
@@ -246,6 +161,7 @@
       });
     }
 
+    // Load saved user list from server
     function loadUsers() {
       fetch("/get-users")
         .then(res => res.json())
@@ -269,6 +185,7 @@
         });
     }
 
+    // Populate form with current user data for editing
     function editUser(user) {
       switchTab('addTab', document.querySelectorAll('nav button')[0]);
       editingUserId = user.id;
@@ -286,9 +203,10 @@
       document.getElementById("propertyAddress").value = user.propertyAddress || "";
       document.getElementById("propertyValue").value = user.propertyValue || "";
 
-      if (user.photo) {
+      // Load photo from data URI, if exists
+      if (user.photoData) {
         const img = new Image();
-        img.src = user.photo;
+        img.src = user.photoData;
         img.onload = () => {
           const canvas = document.getElementById("canvas");
           const ctx = canvas.getContext("2d");
@@ -299,13 +217,15 @@
         }
       }
 
-      if (user.thumbImg) {
+      // Load saved fingerprint from data URI, if exists
+      if (user.thumbData) {
         const fp = document.getElementById("fingerprintPreview");
-        fp.src = user.thumbImg;
+        fp.src = user.thumbData;
         fp.style.display = "block";
       }
     }
 
+    // Delete user based on ID
     function deleteUser(id) {
       if (confirm("Delete this user?")) {
         fetch("/delete-user", {
@@ -316,25 +236,30 @@
       }
     }
 
+    // Trigger fingerprint capture using SDK
     function captureFingerprint() {
       if (!window.CaptureFinger) {
         alert("MFS SDK not found. Is RDService running?");
         return;
       }
+
+      // Capture fingerprint with preview
       CaptureFinger(true, (result) => {
         const img = document.getElementById("fingerprintPreview");
-        img.src = "data:image/bmp;base64," + result.BitmapData;
+        img.src = "image/bmp;base64," + result.BitmapData;
         img.style.display = "block";
       }, (error) => {
         alert("Fingerprint capture failed: " + error);
       });
     }
 
+    // Load webcam stream
     navigator.mediaDevices.getUserMedia({ video: true })
       .then(stream => {
         document.getElementById("video").srcObject = stream;
       }).catch(() => alert("Webcam access denied"));
 
+    // Capture snapshot from webcam preview
     function takePhoto() {
       const video = document.getElementById("video");
       const canvas = document.getElementById("canvas");
