--- a/public/index.html
+++ b/public/index.html
@@ -1,142 +1,70 @@
-<!-- INDEX PAGE -->
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PRTU - Association</title>
+  <!-- Styles for landing page -->
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-    }
-
+    * { box-sizing: border-box; }
+    body { font-family: Arial, sans-serif; line-height: 1.6; margin:0; padding:0; }
     header {
-      background-color: #101213;
-      color: white;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center; 
-      padding: 40px;
+      background: #101213;
+      color: #fff;
       text-align: center;
+      padding: 40px 20px;
       position: relative;
     }
-
-    header h1 {
-      flex: 1 1 100%;
-      font-size: 2rem;
-    }
-
+    header h1 { font-size: 2rem; }
     header img {
       position: absolute;
-      right: 20px;
       top: 20px;
-      height: 100px;
-      width: auto;
+      right: 20px;
+      height: 80px;
     }
-
     nav {
-      background-color: #e6e6e6;
+      background: #e6e6e6;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      align-items: center;
       padding: 20px;
-      min-height: 192px;
     }
-
+    nav marquee h3 { margin:0; color:#444; }
     nav a {
       margin: 10px;
       padding: 12px 24px;
-      background-color: #004080;
-      color: white;
+      background: #004080;
+      color: #fff;
       text-decoration: none;
       border-radius: 8px;
-      font-size: 1.1rem;
-      transition: background-color 0.3s;
+      transition: background 0.3s;
     }
-
-    nav a:hover {
-      background-color: #0066cc;
-    }
-
-    main {
-      padding: 30px 20px;
-    }
-
-    section {
-      margin-bottom: 50px;
-    }
-
-    #contact {
-      background-color: #f2f2f2;
-      padding: 20px;
-      border-radius: 10px;
-    }
-
+    nav a:hover { background: #0066cc; }
+    main { padding: 30px 20px; }
+    section { margin-bottom: 40px; }
+    #contact { background:#f2f2f2; padding:20px; border-radius:8px; }
     footer {
-      background-color: #333;
-      color: white;
+      background: #333;
+      color: #fff;
       text-align: center;
       padding: 15px;
     }
-
-    @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      header img {
-        position: static;
-        margin-top: 10px;
-        height: 50px;
-      }
-
-      nav {
-        flex-direction: column;
-        padding: 30px 10px;
-      }
-
-      nav a {
-        width: 100%;
-        max-width: 300px;
-        text-align: center;
-      }
-
-      main {
-        padding: 20px 10px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      header h1 {
-        font-size: 1.5rem;
-      }
-
-      nav a {
-        font-size: 1rem;
-        padding: 10px 20px;
-      }
+    @media (max-width:768px) {
+      header img { position: static; margin-top:10px; height:50px; }
+      nav { flex-direction:column; }
+      nav a { width:100%; max-width:300px; text-align:center; }
     }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>PRTU - ASSOCIATION</h1>
+    <h1>PRTU Association</h1>
     <img src="images.png" alt="PRTU Logo" />
   </header>
 
   <nav>
-    <marquee><h3>This site is for the verification of Notarized Document and is not for Advertisement</h3></marquee>
+    <!-- Notice: use marquee only if acceptable; otherwise replace with CSS animation -->
+    <marquee><h3>This site is for verification of notarized documents, not advertisement.</h3></marquee>
     <a href="verify.html">Verify</a>
     <a href="about.html">About Us</a>
     <a href="login.html">Login</a>
@@ -145,36 +73,39 @@
   <main>
     <section id="contact">
       <h2>Contact Us</h2>
-      <p>Email: </p>
-      <p>Phone: +919220574357</p>
-      <p>Address: PRTU Office main market near Kalyan Civil court Kalyan West pin.421301</p>
+      <p>Email: <a href="pandavarchana77@gmail.com">pandavarchana77@gmail.com</a></p>
+      <p>Phone: +91 9220574357</p>
+      <p>Address: N.J House, Cabin no.B Hiralal Chotelal compound,<br>
+       Kalyan court ,Bhaji Market,Old Station Road,<br>
+       Kalyan West Dist.Thane (Maharashta)- 421301</p>
     </section>
 
     <section id="details">
       <h2>Notarized Documents</h2>
-      <p>Affidavit</p>
-      <p>Agreement of Sales</p>
-      <p>Power of Attorney</p>
-      <p>Sales Deed</p>
-      <p>Lease Deed</p>
-      <p>Will</p>
-      <p>Indemnity Deed</p>
-      <p>Consent Deed</p>
-      <p>Declaration</p>
-      <p>Release Deed</p>
-      <p>Retirement Deed</p>
-      <p>Leave and License</p>
-      <p>Mortgage Deed</p>
-      <p>Development Agreement</p>
-      <p>MOU</p>
-      <p>Partnership Deed</p>
-      <p>Pagdi Agreement</p>
+      <ul>
+        <li>Affidavit</li>
+        <li>Agreement of Sale</li>
+        <li>Power of Attorney</li>
+        <li>Sales Deed</li>
+        <li>Lease Deed</li>
+        <li>Will</li>
+        <li>Indemnity Deed</li>
+        <li>Consent Deed</li>
+        <li>Declaration</li>
+        <li>Release Deed</li>
+        <li>Retirement Deed</li>
+        <li>Leave and License</li>
+        <li>Mortgage Deed</li>
+        <li>Development Agreement</li>
+        <li>MOU</li>
+        <li>Partnership Deed</li>
+        <li>Pagdi Agreement</li>
+      </ul>
     </section>
   </main>
 
   <footer>
     &copy; 2025 PRTU Association. All rights reserved.
   </footer>
-
 </body>
 </html>
