--- a/public/login.html
+++ b/public/login.html
@@ -1,10 +1,10 @@
-<!-- LOGIN PAGE -->
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - PRTU</title>
+  <!-- Inline styles; consider external CSS -->
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -13,51 +13,56 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      margin: 0;
     }
     .login-box {
-      background: white;
+      background: #fff;
       padding: 25px;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       width: 300px;
     }
-    input {
-      display: block;
-      margin: 10px 0;
-      width: 100%;
-      padding: 10px;
-      font-size: 14px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
-    button {
-      background: #004080;
-      color: white;
-      padding: 10px;
-      border: none;
-      width: 100%;
-      cursor: pointer;
-      font-size: 16px;
-      border-radius: 4px;
-      margin-top: 10px;
-    }
-    h2 {
+    .login-box h2 {
       text-align: center;
       color: #004080;
+      margin-bottom: 20px;
+    }
+    .login-box input {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      font-size: 14px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    .login-box button {
+      background: #004080;
+      color: #fff;
+      border: none;
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    .login-box button:hover {
+      background: #0066cc;
     }
   </style>
 </head>
 <body>
   <div class="login-box">
     <h2>PRTU Login</h2>
-    <input type="text" id="username" placeholder="Username" />
+    <input type="text" id="username" placeholder="Username" autofocus />
     <input type="password" id="password" placeholder="Password" />
     <button onclick="login()">Login</button>
   </div>
 
   <script>
     function login() {
-      const u = document.getElementById('username').value;
+      const u = document.getElementById('username').value.trim();
       const p = document.getElementById('password').value;
       if (u === 'admin' && p === 'admin') {
         window.location.href = 'dashboard.html';
@@ -65,6 +70,10 @@
         alert('Invalid credentials');
       }
     }
+    // Enter key submits
+    document.body.addEventListener('keydown', e => {
+      if (e.key === 'Enter') login();
+    });
   </script>
 </body>
 </html>
