--- a/public/user.html
+++ b/public/user.html
@@ -1,51 +1,19 @@
-<!-- USER PAGE -->
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>All Users</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>All Users - PRTU</title>
+  <!-- Inline styles; can be moved to CSS -->
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      padding: 20px;
-    }
-    h2 {
-      text-align: center;
-      color: #004080;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-    th, td {
-      padding: 8px;
-      border: 1px solid #ccc;
-      text-align: left;
-      font-size: 14px;
-    }
-    th {
-      background-color: #004080;
-      color: white;
-    }
-    button {
-      padding: 6px 10px;
-      margin: 2px;
-      font-size: 12px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .edit-btn {
-      background-color: #28a745;
-      color: white;
-    }
-    .delete-btn {
-      background-color: #dc3545;
-      color: white;
-    }
+    body { font-family: Arial, sans-serif; background: #f2f2f2; padding: 20px; margin:0; }
+    h2 { text-align: center; color: #004080; margin-bottom: 20px; }
+    table { width: 100%; border-collapse: collapse; background: #fff; }
+    th, td { padding: 8px; border: 1px solid #ccc; font-size: 14px; }
+    th { background: #004080; color: #fff; }
+    button { padding: 6px 10px; margin: 2px; font-size: 12px; border: none; border-radius: 4px; cursor: pointer; }
+    .edit-btn { background: #28a745; color: #fff; }
+    .delete-btn { background: #dc3545; color: #fff; }
   </style>
 </head>
 <body>
@@ -63,44 +31,55 @@
   </table>
 
   <script>
+    // Fetch and display users
     async function loadUsers() {
-      const res = await fetch('/get-users');
-      const users = await res.json();
-      const tbody = document.querySelector('#usersTable tbody');
-      tbody.innerHTML = '';
-
-      users.forEach(user => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${user.name}</td>
-          <td>${user.contact}</td>
-          <td>${user.idNumber}</td>
-          <td>
-            <button class="edit-btn" onclick="editUser(${user.id})">Edit</button>
-            <button class="delete-btn" onclick="deleteUser(${user.id})">Delete</button>
-          </td>
-        `;
-        tbody.appendChild(row);
-      });
+      try {
+        const res = await fetch('/get-users');
+        const users = await res.json();
+        const tbody = document.querySelector('#usersTable tbody');
+        tbody.innerHTML = '';
+        users.forEach(u => {
+          const tr = document.createElement('tr');
+          tr.innerHTML = `
+            <td>${u.name}</td>
+            <td>${u.contact}</td>
+            <td>${u.idNumber}</td>
+            <td>
+              <button class="edit-btn" onclick="editUser(${u.id})">Edit</button>
+              <button class="delete-btn" onclick="deleteUser(${u.id})">Delete</button>
+            </td>
+          `;
+          tbody.appendChild(tr);
+        });
+      } catch (e) {
+        alert('Error loading users');
+      }
     }
 
+    // Redirect to dashboard for editing
     function editUser(id) {
       window.location.href = `dashboard.html?edit=${id}`;
     }
 
+    // Delete user and refresh
     async function deleteUser(id) {
-      if (!confirm('Are you sure you want to delete this user?')) return;
-      const res = await fetch('/delete-user', {
-        method: 'POST',
-        headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify({ id })
-      });
-      const result = await res.json();
-      alert(result.message);
-      loadUsers();
+      if (!confirm('Are you sure?')) return;
+      try {
+        const res = await fetch('/delete-user', {
+          method: 'POST',
+          headers: {'Content-Type':'application/json'},
+          body: JSON.stringify({ id })
+        });
+        const data = await res.json();
+        alert(data.message);
+        loadUsers();
+      } catch (e) {
+        alert('Deletion failed');
+      }
     }
 
-    loadUsers();
+    // Initialize on page load
+    document.addEventListener('DOMContentLoaded', loadUsers);
   </script>
 </body>
 </html>
