--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
       <p>Phone: +91 9220574357</p>
       <p>Address: N.J House, Cabin no.B Hiralal Chotelal compound,<br>
        Kalyan court ,Bhaji Market,Old Station Road,<br>
-       Kalyan West Dist.Thane (Maharashta)- 421301</p>
+       Kalyan (West) Dist.Thane (Maharashta)- 421301</p>
     </section>
 
     <section id="details">
@@ -109,3 +109,4 @@
   </footer>
 </body>
 </html>
+
