--- a/public/index.html
+++ b/public/index.html
@@ -64,9 +64,8 @@
 
   <nav>
     <!-- Notice: use marquee only if acceptable; otherwise replace with CSS animation -->
-    <marquee><h3>This site is for verification of notarized documents, not advertisement.</h3></marquee>
+    <marquee><h3>This site is for verification of notarized documents available in the database, not advertisement.</h3></marquee>
     <a href="verify.html">Verify</a>
-    <a href="about.html">About Us</a>
     <a href="login.html">Login</a>
   </nav>
 
@@ -109,4 +108,5 @@
   </footer>
 </body>
 </html>
+
 
