--- a/public/user.html
+++ b/public/user.html
@@ -3,27 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>All Users - PRTU</title>
-  <!-- Inline styles; can be moved to CSS -->
+  <title>All Sale Deeds - PRTU</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #f2f2f2; padding: 20px; margin:0; }
+    body { font-family: Arial, sans-serif; background: #f2f2f2; padding: 20px; margin: 0; }
     h2 { text-align: center; color: #004080; margin-bottom: 20px; }
     table { width: 100%; border-collapse: collapse; background: #fff; }
-    th, td { padding: 8px; border: 1px solid #ccc; font-size: 14px; }
+    th, td { padding: 8px; border: 1px solid #ccc; font-size: 14px; vertical-align: top; }
     th { background: #004080; color: #fff; }
-    button { padding: 6px 10px; margin: 2px; font-size: 12px; border: none; border-radius: 4px; cursor: pointer; }
+    img.thumb { width: 60px; height: auto; border-radius: 4px; }
+    .actions button { padding: 6px 10px; margin: 2px; font-size: 12px; border: none; border-radius: 4px; cursor: pointer; }
     .edit-btn { background: #28a745; color: #fff; }
     .delete-btn { background: #dc3545; color: #fff; }
   </style>
 </head>
 <body>
-  <h2>Saved Users</h2>
+  <h2>Saved Sale Deeds</h2>
   <table id="usersTable">
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Contact</th>
-        <th>ID Number</th>
+        <th>Doc Number</th>
+        <th>Notary Sr. No.</th>
+        <th>Doc Type</th>
+        <th>Purchaser</th>
+        <th>Seller</th>
+        <th>Witness</th>
+        <th>Schedule</th>
+        <th>Consideration</th>
+        <th>Photo (P)</th>
+        <th>Thumb (P)</th>
         <th>Actions</th>
       </tr>
     </thead>
@@ -31,7 +38,7 @@
   </table>
 
   <script>
-    // Fetch and display users
+    // Fetch and display saved documents
     async function loadUsers() {
       try {
         const res = await fetch('/get-users');
@@ -41,10 +48,17 @@
         users.forEach(u => {
           const tr = document.createElement('tr');
           tr.innerHTML = `
-            <td>${u.name}</td>
-            <td>${u.contact}</td>
-            <td>${u.idNumber}</td>
-            <td>
+            <td>${u.metaDocumentNumber || ''}</td>
+            <td>${u.metaNotarySrNo || ''}</td>
+            <td>${u.metaDocumentType || ''}</td>
+            <td>${u.purchaserName || ''}</td>
+            <td>${u.sellerName || ''}</td>
+            <td>${u.witnessName || ''}</td>
+            <td>${u.scheduleOfProperty || ''}</td>
+            <td>${u.consideration || ''}</td>
+            <td>${u.photoP ? `<img src="${u.photoP}" class="thumb"/>` : ''}</td>
+            <td>${u.thumbP ? `<img src="${u.thumbP}" class="thumb"/>` : ''}</td>
+            <td class="actions">
               <button class="edit-btn" onclick="editUser(${u.id})">Edit</button>
               <button class="delete-btn" onclick="deleteUser(${u.id})">Delete</button>
             </td>
@@ -52,18 +66,18 @@
           tbody.appendChild(tr);
         });
       } catch (e) {
-        alert('Error loading users');
+        alert('Error loading records');
       }
     }
 
-    // Redirect to dashboard for editing
+    // Navigate to dashboard with edit parameter
     function editUser(id) {
       window.location.href = `dashboard.html?edit=${id}`;
     }
 
-    // Delete user and refresh
+    // Send delete request then reload
     async function deleteUser(id) {
-      if (!confirm('Are you sure?')) return;
+      if (!confirm('Are you sure you want to delete this record?')) return;
       try {
         const res = await fetch('/delete-user', {
           method: 'POST',
@@ -73,12 +87,11 @@
         const data = await res.json();
         alert(data.message);
         loadUsers();
-      } catch (e) {
+      } catch {
         alert('Deletion failed');
       }
     }
 
-    // Initialize on page load
     document.addEventListener('DOMContentLoaded', loadUsers);
   </script>
 </body>
