--- a/public/user.html
+++ b/public/user.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>a
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -96,3 +96,4 @@
   </script>
 </body>
 </html>
+
