--- a/public/user.html
+++ b/public/user.html
@@ -1,9 +1,17 @@
-<!DOCTYPE html>a
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>All Sale Deeds - PRTU</title>
+  <!--
+    users.html
+    - Displays all saved sale-deed records in a table
+    - Fields: Document No., Notary Sr. No., Doc Type,
+      Purchaser, Seller, Witness, Schedule, Consideration,
+      Photo (Purchaser) & Thumb (Purchaser)
+    - Edit/Delete actions link back to dashboard.html
+  -->
   <style>
     body { font-family: Arial, sans-serif; background: #f2f2f2; padding: 20px; margin: 0; }
     h2 { text-align: center; color: #004080; margin-bottom: 20px; }
@@ -14,14 +22,15 @@
     .actions button { padding: 6px 10px; margin: 2px; font-size: 12px; border: none; border-radius: 4px; cursor: pointer; }
     .edit-btn { background: #28a745; color: #fff; }
     .delete-btn { background: #dc3545; color: #fff; }
+    .no-records { text-align: center; font-style: italic; padding: 20px; }
   </style>
 </head>
 <body>
   <h2>Saved Sale Deeds</h2>
-  <table id="usersTable">
+  <table id="recordsTable">
     <thead>
       <tr>
-        <th>Doc Number</th>
+        <th>Doc No.</th>
         <th>Notary Sr. No.</th>
         <th>Doc Type</th>
         <th>Purchaser</th>
@@ -38,46 +47,50 @@
   </table>
 
   <script>
-    // Fetch and display saved documents
-    async function loadUsers() {
+    // Load and render all saved records
+    async function loadRecords() {
+      const tbody = document.querySelector('#recordsTable tbody');
+      tbody.innerHTML = '';
       try {
         const res = await fetch('/get-users');
-        const users = await res.json();
-        const tbody = document.querySelector('#usersTable tbody');
-        tbody.innerHTML = '';
-        users.forEach(u => {
+        const records = await res.json();
+        if (!records.length) {
+          tbody.innerHTML = '<tr><td colspan="11" class="no-records">No records found.</td></tr>';
+          return;
+        }
+        records.forEach(r => {
           const tr = document.createElement('tr');
           tr.innerHTML = `
-            <td>${u.metaDocumentNumber || ''}</td>
-            <td>${u.metaNotarySrNo || ''}</td>
-            <td>${u.metaDocumentType || ''}</td>
-            <td>${u.purchaserName || ''}</td>
-            <td>${u.sellerName || ''}</td>
-            <td>${u.witnessName || ''}</td>
-            <td>${u.scheduleOfProperty || ''}</td>
-            <td>${u.consideration || ''}</td>
-            <td>${u.photoP ? `<img src="${u.photoP}" class="thumb"/>` : ''}</td>
-            <td>${u.thumbP ? `<img src="${u.thumbP}" class="thumb"/>` : ''}</td>
+            <td>\${r.metaDocumentNumber || '—'}</td>
+            <td>\${r.metaNotarySrNo || '—'}</td>
+            <td>\${r.metaDocumentType || '—'}</td>
+            <td>\${r.purchaserName || '—'}</td>
+            <td>\${r.sellerName || '—'}</td>
+            <td>\${r.witnessName || '—'}</td>
+            <td>\${r.scheduleOfProperty || '—'}</td>
+            <td>\${r.consideration || '—'}</td>
+            <td>\${r.photoP ? `<img src="\${r.photoP}" class="thumb" alt="Photo">` : '—'}</td>
+            <td>\${r.thumbP ? `<img src="\${r.thumbP}" class="thumb" alt="Thumb">` : '—'}</td>
             <td class="actions">
-              <button class="edit-btn" onclick="editUser(${u.id})">Edit</button>
-              <button class="delete-btn" onclick="deleteUser(${u.id})">Delete</button>
+              <button class="edit-btn" onclick="editRecord(\${r.id})">Edit</button>
+              <button class="delete-btn" onclick="deleteRecord(\${r.id})">Delete</button>
             </td>
           `;
           tbody.appendChild(tr);
         });
       } catch (e) {
-        alert('Error loading records');
+        console.error(e);
+        tbody.innerHTML = '<tr><td colspan="11" class="no-records">Error loading records</td></tr>';
       }
     }
 
-    // Navigate to dashboard with edit parameter
-    function editUser(id) {
+    function editRecord(id) {
+      // redirect to dashboard with edit param
       window.location.href = `dashboard.html?edit=${id}`;
     }
 
-    // Send delete request then reload
-    async function deleteUser(id) {
-      if (!confirm('Are you sure you want to delete this record?')) return;
+    async function deleteRecord(id) {
+      if (!confirm('Delete this record?')) return;
       try {
         const res = await fetch('/delete-user', {
           method: 'POST',
@@ -86,14 +99,14 @@
         });
         const data = await res.json();
         alert(data.message);
-        loadUsers();
+        loadRecords();
       } catch {
         alert('Deletion failed');
       }
     }
 
-    document.addEventListener('DOMContentLoaded', loadUsers);
+    // Initialize on page load
+    document.addEventListener('DOMContentLoaded', loadRecords);
   </script>
 </body>
 </html>
-
